@@ -5,6 +5,7 @@ import static org.awaitility.Awaitility.await;
 
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -17,7 +18,6 @@ import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.util.LinkedMultiValueMap;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationLocalCILocalVCTest;
 import de.tum.in.www1.artemis.competency.CompetencyProgressUtilService;
@@ -42,6 +42,8 @@ import de.tum.in.www1.artemis.team.TeamUtilService;
 import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.util.PageableSearchUtilService;
 import de.tum.in.www1.artemis.web.rest.dto.CourseCompetencyProgressDTO;
+import de.tum.in.www1.artemis.web.rest.dto.SearchResultPageDTO;
+import de.tum.in.www1.artemis.web.rest.dto.competency.CompetencyRelationDTO;
 import de.tum.in.www1.artemis.web.rest.dto.competency.CompetencyWithTailRelationDTO;
 
 class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCTest {
@@ -159,7 +161,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         return competency;
     }
 
-    CompetencyRelation createRelation(Competency head, Competency tail, RelationType type) {
+    CompetencyRelation createRelation(Competency tail, Competency head, RelationType type) {
         CompetencyRelation relation = new CompetencyRelation();
         relation.setHeadCompetency(head);
         relation.setTailCompetency(tail);
@@ -252,31 +254,48 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         submissionRepository.save(submission);
     }
 
-    private void testAllPreAuthorize() throws Exception {
+    private void testAllPreAuthorizeEditor() throws Exception {
+        request.get("/api/competencies/for-import", HttpStatus.FORBIDDEN, SearchResultPageDTO.class);
+        request.post("/api/courses/" + course.getId() + "/competencies/import/bulk", Collections.emptyList(), HttpStatus.FORBIDDEN);
+    }
+
+    private void testAllPreAuthorizeInstructor() throws Exception {
         request.put("/api/courses/" + course.getId() + "/competencies", new Competency(), HttpStatus.FORBIDDEN);
         request.post("/api/courses/" + course.getId() + "/competencies", new Competency(), HttpStatus.FORBIDDEN);
         request.get("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/course-progress", HttpStatus.FORBIDDEN, CourseCompetencyProgressDTO.class);
         request.delete("/api/courses/" + course.getId() + "/competencies/" + competency.getId(), HttpStatus.FORBIDDEN);
-        request.post("/api/courses/" + course.getId() + "/competencies/bulk", List.of(), HttpStatus.FORBIDDEN);
+        request.post("/api/courses/" + course.getId() + "/competencies/bulk", Collections.emptyList(), HttpStatus.FORBIDDEN);
+        // import
         request.post("/api/courses/" + course.getId() + "/competencies/import-all/1", null, HttpStatus.FORBIDDEN);
+        request.post("/api/courses/" + course.getId() + "/competencies/import", competency, HttpStatus.FORBIDDEN);
+        // prerequisites
+        request.post("/api/courses/" + course.getId() + "/prerequisites/1", null, HttpStatus.FORBIDDEN);
+        request.delete("/api/courses/" + course.getId() + "/prerequisites/1", HttpStatus.FORBIDDEN);
+        // relations
+        request.post("/api/courses/" + course.getId() + "/competencies/relations/", new CompetencyRelation(), HttpStatus.FORBIDDEN);
+        request.getSet("/api/courses/" + course.getId() + "/competencies/relations/", HttpStatus.FORBIDDEN, CompetencyRelationDTO.class);
+        request.delete("/api/courses/" + course.getId() + "/competencies/relations/1", HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testAll_asTutor() throws Exception {
-        this.testAllPreAuthorize();
+        this.testAllPreAuthorizeInstructor();
+        this.testAllPreAuthorizeEditor();
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void testAll_asStudent() throws Exception {
-        this.testAllPreAuthorize();
+        this.testAllPreAuthorizeInstructor();
+        this.testAllPreAuthorizeEditor();
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
     void testAll_asEditor() throws Exception {
-        this.testAllPreAuthorize();
+        this.testAllPreAuthorizeInstructor();
+        // do not call testAllPreAuthorizeEditor, as these methods should succeed
     }
 
     @Test
@@ -307,7 +326,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         competencyProgressUtilService.createCompetencyProgress(competency, student1, 0, 0);
 
         User student2 = userUtilService.getUserByLogin(TEST_PREFIX + "student2");
-        competencyProgressUtilService.createCompetencyProgress(competency, student2, 0, 0);
+        competencyProgressUtilService.createCompetencyProgress(competency, student2, 1, 1);
 
         final var textUnit = textUnitRepository.findById(idOfTextUnitOfLectureOne).get();
         lectureUtilService.completeLectureUnitForUser(textUnit, student2);
@@ -396,16 +415,12 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void deleteCompetency_withRelatedCompetencies_shouldDeleteCompetencyAndRelations() throws Exception {
-        Competency competency1 = competencyUtilService.createCompetency(course);
-
-        var relation = new CompetencyRelation();
-        relation.setTailCompetency(competency);
-        relation.setHeadCompetency(competency1);
-        relation.setType(RelationType.EXTENDS);
-        competencyRelationRepository.save(relation);
+        Competency competency2 = competencyUtilService.createCompetency(course);
+        createRelation(competency, competency2, RelationType.EXTENDS);
 
         request.delete("/api/courses/" + course.getId() + "/competencies/" + competency.getId(), HttpStatus.OK);
-        Set<CompetencyRelation> relations = competencyRelationRepository.findAllByCompetencyId(competency.getId());
+
+        Set<CompetencyRelation> relations = competencyRelationRepository.findAllWithHeadAndTailByCourseId(course.getId());
         assertThat(relations).isEmpty();
     }
 
@@ -425,13 +440,15 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void createCompetencyRelation() throws Exception {
-        Long idOfOtherCompetency = competencyUtilService.createCompetency(course).getId();
+        var headCompetency = competencyUtilService.createCompetency(course);
+        var relationToCreate = new CompetencyRelation();
+        relationToCreate.setTailCompetency(competency);
+        relationToCreate.setHeadCompetency(headCompetency);
+        relationToCreate.setType(RelationType.EXTENDS);
 
-        request.postWithoutResponseBody(
-                "/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations/" + idOfOtherCompetency + "?type=" + RelationType.EXTENDS.name(),
-                HttpStatus.OK, new LinkedMultiValueMap<>());
+        request.postWithResponseBody("/api/courses/" + course.getId() + "/competencies/relations", relationToCreate, CompetencyRelation.class, HttpStatus.OK);
 
-        var relations = competencyRelationRepository.findAllByCompetencyId(competency.getId());
+        var relations = competencyRelationRepository.findAllWithHeadAndTailByCourseId(course.getId());
         assertThat(relations).hasSize(1);
         assertThat(relations.stream().findFirst().get().getType()).isEqualTo(RelationType.EXTENDS);
     }
@@ -439,91 +456,61 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void createCompetencyRelation_shouldReturnBadRequest() throws Exception {
-        Long idOfOtherCompetency = competencyUtilService.createCompetency(course).getId();
+        var headCompetency = competencyUtilService.createCompetency(course);
+        var relationToCreate = new CompetencyRelation();
+        relationToCreate.setTailCompetency(competency);
+        relationToCreate.setHeadCompetency(headCompetency);
+        // relation type must be set
+        relationToCreate.setType(null);
 
-        request.post("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations/" + idOfOtherCompetency + "?type=" + "abc123xyz", null,
-                HttpStatus.BAD_REQUEST);
+        request.post("/api/courses/" + course.getId() + "/competencies/relations/", relationToCreate, HttpStatus.BAD_REQUEST);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void createCompetencyRelation_shouldReturnBadRequest_ForCircularRelations() throws Exception {
-        Long idOfOtherCompetency1 = competencyUtilService.createCompetency(course).getId();
-        Competency otherCompetency1 = competencyRepository.findByIdElseThrow(idOfOtherCompetency1);
-        Long idOfOtherCompetency2 = competencyUtilService.createCompetency(course).getId();
-        Competency otherCompetency2 = competencyRepository.findByIdElseThrow(idOfOtherCompetency1);
+        Competency competency2 = competencyUtilService.createCompetency(course);
+        Competency competency3 = competencyUtilService.createCompetency(course);
 
-        var relation1 = new CompetencyRelation();
-        relation1.setTailCompetency(competency);
-        relation1.setHeadCompetency(otherCompetency1);
-        relation1.setType(RelationType.EXTENDS);
-        competencyRelationRepository.save(relation1);
+        createRelation(competency, competency2, RelationType.EXTENDS);
+        createRelation(competency2, competency3, RelationType.MATCHES);
 
-        var relation2 = new CompetencyRelation();
-        relation2.setTailCompetency(otherCompetency1);
-        relation2.setHeadCompetency(otherCompetency2);
-        relation2.setType(RelationType.MATCHES);
-        competencyRelationRepository.save(relation2);
+        var relation = new CompetencyRelation();
+        relation.setTailCompetency(competency3);
+        relation.setHeadCompetency(competency);
+        relation.setType(RelationType.ASSUMES);
 
-        request.post("/api/courses/" + course.getId() + "/competencies/" + idOfOtherCompetency2 + "/relations/" + competency.getId() + "?type=" + RelationType.ASSUMES.name(), null,
-                HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student42", roles = "USER")
-    void createCompetencyRelation_shouldReturnForbidden() throws Exception {
-        Long idOfOtherCompetency = competencyUtilService.createCompetency(course).getId();
-
-        request.post("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations/" + idOfOtherCompetency + "?type=" + RelationType.EXTENDS.name(), null,
-                HttpStatus.FORBIDDEN);
+        request.post("/api/courses/" + course.getId() + "/competencies/relations/", relation, HttpStatus.BAD_REQUEST);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void getCompetencyRelations() throws Exception {
-        Competency otherCompetency = competencyUtilService.createCompetency(course);
+        Competency competency2 = competencyUtilService.createCompetency(course);
+        Competency competency3 = competencyUtilService.createCompetency(course);
 
-        var relation = new CompetencyRelation();
-        relation.setTailCompetency(competency);
-        relation.setHeadCompetency(otherCompetency);
-        relation.setType(RelationType.EXTENDS);
-        relation = competencyRelationRepository.save(relation);
+        var relation = createRelation(competency, competency2, RelationType.EXTENDS);
+        var relation2 = createRelation(competency2, competency3, RelationType.EXTENDS);
+        var expectedRelations = Set.of(new CompetencyRelationDTO(relation.getId(), relation.getTailCompetency().getId(), relation.getHeadCompetency().getId(), relation.getType()),
+                new CompetencyRelationDTO(relation2.getId(), relation2.getTailCompetency().getId(), relation2.getHeadCompetency().getId(), relation2.getType()));
 
-        var relations = request.getList("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations", HttpStatus.OK, CompetencyRelation.class);
+        var actualRelations = request.getSet("/api/courses/" + course.getId() + "/competencies/relations", HttpStatus.OK, CompetencyRelationDTO.class);
 
-        assertThat(relations).hasSize(1);
-        assertThat(relations.get(0)).isEqualTo(relation);
+        assertThat(actualRelations).hasSize(2);
+        assertThat(actualRelations).isEqualTo(expectedRelations);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void deleteCompetencyRelation() throws Exception {
-        Competency otherCompetency = competencyUtilService.createCompetency(course);
+        Competency competency2 = competencyUtilService.createCompetency(course);
 
-        var relation = new CompetencyRelation();
-        relation.setTailCompetency(competency);
-        relation.setHeadCompetency(otherCompetency);
-        relation.setType(RelationType.EXTENDS);
-        relation = competencyRelationRepository.save(relation);
+        var relation = createRelation(competency, competency2, RelationType.EXTENDS);
 
-        request.delete("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations/" + relation.getId(), HttpStatus.OK);
+        request.delete("/api/courses/" + course.getId() + "/competencies/relations/" + relation.getId(), HttpStatus.OK);
 
-        var relations = competencyRelationRepository.findAllByCompetencyId(competency.getId());
+        var relations = competencyRelationRepository.findAllWithHeadAndTailByCourseId(course.getId());
         assertThat(relations).isEmpty();
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-    void deleteCompetencyRelation_shouldReturnBadRequest() throws Exception {
-        Competency otherCompetency = competencyUtilService.createCompetency(course);
-
-        var relation = new CompetencyRelation();
-        relation.setTailCompetency(otherCompetency); // invalid
-        relation.setHeadCompetency(competency);
-        relation.setType(RelationType.EXTENDS);
-        relation = competencyRelationRepository.save(relation);
-
-        request.delete("/api/courses/" + course.getId() + "/competencies/" + competency.getId() + "/relations/" + relation.getId(), HttpStatus.BAD_REQUEST);
     }
 
     @Test
@@ -734,12 +721,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     }
 
     @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void addPrerequisite_unauthorized() throws Exception {
-        request.postWithResponseBody("/api/courses/" + course.getId() + "/prerequisites/99", null, Competency.class, HttpStatus.FORBIDDEN);
-    }
-
-    @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void removePrerequisite() throws Exception {
         request.delete("/api/courses/" + course2.getId() + "/prerequisites/" + competency.getId(), HttpStatus.OK);
@@ -752,12 +733,6 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void removePrerequisite_bad_request() throws Exception {
         request.delete("/api/courses/" + course.getId() + "/prerequisites/" + competency.getId(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void removePrerequisite_unauthorized() throws Exception {
-        request.delete("/api/courses/" + course2.getId() + "/prerequisites/" + competency.getId(), HttpStatus.FORBIDDEN);
     }
 
     @Test
@@ -791,7 +766,7 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-    void createCompetencies_asInstructor_badRequest() throws Exception {
+    void createCompetencies_asInstructor_shouldReturnBadRequest() throws Exception {
         Competency competency = new Competency(); // no title
         request.post("/api/courses/" + course.getId() + "/competencies/bulk", List.of(competency), HttpStatus.BAD_REQUEST);
         competency.setTitle(" "); // empty title
@@ -802,17 +777,25 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
     }
 
     @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
+    void createCompetencies_asInstructorNotInCourse_shouldReturnForbidden() throws Exception {
+        request.post("/api/courses/" + course.getId() + "/competencies/bulk", Collections.emptyList(), HttpStatus.FORBIDDEN);
+    }
+
+    @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void importingCompetencies_asInstructor_shouldImportCompetencies() throws Exception {
-        var competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course2.getId(), null,
+        var course3 = courseUtilService.createCourse();
+
+        var competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId(), null,
                 CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
         assertThat(competencyDTOList).isEmpty();
 
-        Competency head = createCompetency(course2);
-        Competency tail = createCompetency(course2);
-        createRelation(head, tail, RelationType.RELATES);
+        Competency head = createCompetency(course3);
+        Competency tail = createCompetency(course3);
+        createRelation(tail, head, RelationType.RELATES);
 
-        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course2.getId() + "?importRelations=true", null,
+        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId() + "?importRelations=true", null,
                 CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
 
         assertThat(competencyDTOList).hasSize(2);
@@ -820,32 +803,85 @@ class CompetencyIntegrationTest extends AbstractSpringIntegrationLocalCILocalVCT
         assertThat(competencyDTOList.get(0).tailRelations()).isNull();
         assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
 
-        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course2.getId(), null,
+        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course3.getId(), null,
                 CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
         assertThat(competencyDTOList).hasSize(2);
         // relations should be empty when not importing them
         assertThat(competencyDTOList.get(0).tailRelations()).isNull();
         assertThat(competencyDTOList.get(1).tailRelations()).isNull();
-
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
-    void createCompetencies_asInstructorNotInCourse_shouldReturnForbidden() throws Exception {
-        request.post("/api/courses/" + course.getId() + "/competencies/bulk", List.of(), HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
     void importCompetencies_instructorNotInCourse_shouldReturnForbidden() throws Exception {
-        request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course2.getId(), null, CompetencyWithTailRelationDTO.class,
-                HttpStatus.FORBIDDEN);
+        request.post("/api/courses/" + course.getId() + "/competencies/import-all/" + course2.getId(), null, HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
-    void importingCompetencies_intoSameCourse_shouldReturnBadRequest() throws Exception {
-        request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import-all/" + course.getId(), null, CompetencyWithTailRelationDTO.class,
-                HttpStatus.BAD_REQUEST);
+    void importCompetencies_intoSameCourse_shouldReturnBadRequest() throws Exception {
+        request.post("/api/courses/" + course.getId() + "/competencies/import-all/" + course.getId(), null, HttpStatus.BAD_REQUEST);
     }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
+    void bulkImport_instructorNotInCourse_shouldReturnForbidden() throws Exception {
+        request.post("/api/courses/" + course.getId() + "/competencies/import/bulk", Collections.emptyList(), HttpStatus.FORBIDDEN);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void bulkImport_shouldImportCompetencies() throws Exception {
+        var competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import/bulk", Collections.emptyList(),
+                CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
+        assertThat(competencyDTOList).isEmpty();
+
+        Competency head = createCompetency(course2);
+        Competency tail = createCompetency(course2);
+        createRelation(tail, head, RelationType.RELATES);
+        var competencyList = List.of(head, tail);
+
+        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import/bulk?importRelations=true", competencyList,
+                CompetencyWithTailRelationDTO.class, HttpStatus.CREATED);
+
+        assertThat(competencyDTOList).hasSize(2);
+        // competency 2 should be the tail of one relation
+        assertThat(competencyDTOList.get(0).tailRelations()).isNull();
+        assertThat(competencyDTOList.get(1).tailRelations()).hasSize(1);
+
+        competencyDTOList = request.postListWithResponseBody("/api/courses/" + course.getId() + "/competencies/import/bulk", competencyList, CompetencyWithTailRelationDTO.class,
+                HttpStatus.CREATED);
+        assertThat(competencyDTOList).hasSize(2);
+        // relations should be empty when not importing them
+        assertThat(competencyDTOList.get(0).tailRelations()).isNull();
+        assertThat(competencyDTOList.get(1).tailRelations()).isNull();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor42", roles = "INSTRUCTOR")
+    void getCompetenciesForImport_asInstructorNotInCourse_shouldNotGetCompetencies() throws Exception {
+        // configure search so all competencies would get returned
+        final var search = pageableSearchUtilService.configureCompetencySearch("", "", "", "");
+        var result = request.getSearchResult("/api/competencies/for-import", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
+
+        assertThat(result.getResultsOnPage()).isEmpty();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void getCompetenciesForImport_asInstructor_shouldGetCompetenciesFromOwnCourses() throws Exception {
+        final var search = pageableSearchUtilService.configureCompetencySearch(competency.getTitle(), "", "", "");
+        var result = request.getSearchResult("/api/competencies/for-import", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
+
+        assertThat(result.getResultsOnPage()).hasSize(1);
+    }
+
+    @Test
+    @WithMockUser(username = "admin", roles = "ADMIN")
+    void getCompetenciesForImport_asAdmin_shouldGetCompetencies() throws Exception {
+        final var search = pageableSearchUtilService.configureCompetencySearch(competency.getTitle(), "", "", "");
+        final var result = request.getSearchResult("/api/competencies/for-import", HttpStatus.OK, Competency.class, pageableSearchUtilService.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(1);
+    }
+
 }
